# frsimulation

./: CMakeLists.txt  README.md  frverificationConfig.cmake.in  frverificationConfigVersion.cmake.in
examples/fric/: CMakeLists.txt
examples/fric/rtl/: CMakeLists.txt
examples/fric/rtl/design/: fric_client.v  fric_client_master.v  fric_client_slave.v  fric_switch_8port.v  fric_switch_nosym_8port.v
examples/fric/rtl/testbench/: fric_client_xactor.v  fric_monitor.v  fric_xactor.v  tb_top.v
examples/fric/sim/src/: CMakeLists.txt  FricChecker.cpp  FricChecker.h  FricData.cpp  FricData.h  FricEnv.cpp  FricEnv.h  FricIf.cpp  FricIf.h  FricMasterGen.cpp  FricMasterGen.h  FricMasterIf.cpp  FricMasterIf.h  FricMasterXactor.cpp  FricMasterXactor.h  FricMonitor.cpp  FricMonitor.h  FricResponseGen.cpp  FricResponseGen.h  FricSlaveIf.cpp  FricSlaveIf.h  FricSlaveXactor.cpp  FricSlaveXactor.h  FricXactor.cpp  FricXactor.h
examples/fric/sim/tests/: CMakeLists.txt
examples/fric/sim/tests/rand/: CMakeLists.txt  randTest.cpp
examples/fric/sim/tests/triv/: CMakeLists.txt  trivTest.cpp
libfrsim/: CMakeLists.txt
libfrsim/include/: FrSimCReg.h  FrSimCond.h  FrSimIface.h  FrSimIfaceIvl.h  FrSimIfaceSysc.h  FrSimIfaceTriv.h  FrSimReg.h  FrSimReport.h  FrSimReportControl.h  FrSimThread.h  FrSimThreadTracker.h  FrSimTime.h
libfrsim/ivltest/: Makefile  ivltest.cpp  ivltest.v
libfrsim/src/: FrSimCReg.cpp  FrSimCond.cpp  FrSimIface.cpp  FrSimIfaceIvl.cpp  FrSimIfaceSysc.cpp  FrSimIfaceTriv.cpp  FrSimReg.cpp  FrSimReport.cpp  FrSimReportControl.cpp  FrSimThread.cpp  FrSimThreadTracker.cpp
libfrsim/tests/: CMakeLists.txt  testFrReg.cpp  testFrSimIfaceTriv.cpp  testFrSimThread.cpp
libfrvm/: CMakeLists.txt  FrVmCallback.h  FrVmChannel.h  FrVmConsensus.h  FrVmConstraint.cpp  FrVmConstraint.h  FrVmConstraintRange.cpp  FrVmConstraintRange.h  FrVmData.h  FrVmEnv.cpp  FrVmEnv.h  FrVmVoter.cpp  FrVmVoter.h  FrVmXactor.cpp  FrVmXactor.h  Makefile
